change title to WiFi Login

--- a/alogin.html
+++ b/alogin.html
@@ -1,5 +1,5 @@
 <html><head>
-<title>SmartWifi System Login</title>
+<title>WiFi Login</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
