--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <html><head>
-<title>HotSpot System Login</title>
+<title>WiFi Login</title>
 </head>
 <body>
 <form name="redirect" action="http://cloud.smartwifi.vn/splash/prelogin" method="GET">
