--- a/alogin.html
+++ b/alogin.html
@@ -7,20 +7,19 @@
 </head>
 <body onLoad="startClock()">
 
-<form name="redirect" action="http://cloud.smartwifi.vn/splash/prelogin" method="GET">
-
-<input type="hidden" name="res" value="success" />
-<input type="hidden" name="mac" value="$(mac)" />
-<input type="hidden" name="uid" value="$(username)" />
-<input type="hidden" name="userurl" value="$(link-orig)" />
-<input type="hidden" name="link-login-only" value="$(link-login-only)" />
-<input type="hidden" name="nasid" value="$(identity)" />
-<input type="hidden" name="uamip" value="$(server-address)" />
-<input type="hidden" name="uamport" value="mikrotik" />
-<input type="hidden" name="error" value="$(error)" />
-<input type="hidden" name="chap-id" value="$(chap-id)" />
-<input type="hidden" name="chap-challenge" value="$(chap-challenge)" />
-<input type="hidden" name="called" value="$(identity)" />
+<form name="redirect" action="$(server-name)" method="GET">
+  <input type="hidden" name="res" value="success" />
+  <input type="hidden" name="mac" value="$(mac)" />
+  <input type="hidden" name="uid" value="$(username)" />
+  <input type="hidden" name="userurl" value="$(link-orig)" />
+  <input type="hidden" name="link-login-only" value="$(link-login-only)" />
+  <input type="hidden" name="nasid" value="$(identity)" />
+  <input type="hidden" name="uamip" value="$(server-address)" />
+  <input type="hidden" name="ip" value="$(ip)">
+  <input type="hidden" name="uamport" value="mikrotik" />
+  <input type="hidden" name="error" value="$(error)" />
+  <input type="hidden" name="chap-id" value="$(chap-id)" />
+  <input type="hidden" name="chap-challenge" value="$(chap-challenge)" />
 </form>
 
 <script language="JavaScript">
