fix json values

--- a/json/alogin.html
+++ b/json/alogin.html
@@ -49,5 +49,5 @@ $(if http-header == "Access-Control-Allow-Origin")*$(endif)
 	"chapChallenge": "$(chap-challenge-esc)",
 	"popup": "$(popup)",
 	"advert-pending": "$(advert-pending)",
-	"page": "status.html"
+	"page": "alogin.html"
 }
