--- a/json/login.html
+++ b/json/login.html
@@ -1,12 +1,53 @@
 $(if http-header == "Content-Type")application/json$(endif)
 $(if http-header == "Access-Control-Allow-Origin")*$(endif)
 {
-	"isConnected": "$(logged-in)",
+	"loggedIn": "$(logged-in)",
+	"hostname": "$(hostname)",
+	"identity": "$(identity)",
+	"loginBy": "$(login-by)",
+	"serverName": "$(server-name)",
+	"serverAddress": "$(server-address)",
+	"sslLogin": "$(ssl-login)",
+	"linkLogin": "$(link-login)",
+	"linkLoginOnly": "$(link-login-only)",
+	"linkLogout": "$(link-logout)",
+	"linkStatus": "$(link-status)",
+	"linkOrig": "$(link-orig)",
+	"domain": "$(domain)",
+	"interfaceName": "$(interface-name)",
 	"ip": "$(ip)",
 	"mac": "$(mac)",
+	"trial": "$(trial)",
 	"username": "$(username)",
-	"uptime": $(uptime-secs),
-	"timeleft": "$(session-time-left)",
+	"hostIp": "$(host-ip)",
+	"vlanId": "$(vlan-id)",
+	"idleTimeout": "$(idle-timeout)",
+	"idleTimeoutSecs": "$(idle-timeout-secs)",
+	"limitBytesIn": "$(limit-bytes-in)",
+	"limitBytesOut": "$(limit-bytes-out)",
+	"refreshTimeout": "$(refresh-timeout)",
+	"refreshTimeoutSecs": "$(refresh-timeout-secs)",
+	"sessionTimeout": "$(session-timeout)",
+	"sessionTimeoutSecs": "$(session-timeout-secs)",
+	"sessionTimeLeft": "$(session-time-left)",
+	"sessionTimeLeftSecs": "$(session-time-left-secs)",
+	"uptime": "$(uptime)",
+	"uptimeSecs": "$(uptime-secs)",
+	"bytesIn": "$(bytes-in)",
+	"bytesInNice": "$(bytes-in-nice)",
+	"bytesOut": "$(bytes-out)",
+	"bytesOutNice": "$(bytes-out-nice)",
+	"packetsIn": "$(packets-in)",
+	"packetsOut": "$(packets-out)",
+	"remainBytesIn": "$(remain-bytes-in)",
+	"remainBytesOut": "$(remain-bytes-out)",
+	"sessionId": "$(session-id)",
 	"error": "$(error)",
-	"logoutLink": "$(link-logout)"
+	"var": "$(var)",
+	"errorOrig": "$(error-orig)",
+	"chapId": "$(chap-id-esc)",
+	"chapChallenge": "$(chap-challenge-esc)",
+	"popup": "$(popup)",
+	"advert-pending": "$(advert-pending)",
+	"page": "login.html"
 }
