add status file

--- a/alogin.html
+++ b/alogin.html
@@ -5,9 +5,9 @@
 <meta http-equiv="expires" content="-1">
 
 </head>
-<body onLoad="startClock()">
+<body>
 
-<form name="redirect" action="$(server-name)" method="GET">
+<form name="redirect" action="https://wifibiz.net/wifi/$(server-name)" method="GET">
   <input type="hidden" name="res" value="success" />
   <input type="hidden" name="mac" value="$(mac)" />
   <input type="hidden" name="uid" value="$(username)" />
